# grocerystoreoptimizer

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  Dockerfile.api  NEXT_STEPS.txt  PROJECT_HANDOFF.txt  QUICK_START.md  README.md  WHAT_TO_DO_NEXT.txt  docker-compose.yml  launch.bat  launch.ps1  pyproject.toml  pyrightconfig.json  requirements-web.txt  requirements.txt  vercel.json
.github/: copilot-instructions.md
config/: catalog.json
data/: live_pricing.db-shm  live_pricing.db-wal
docs/: IMPLEMENTATION_SUMMARY.md  NEW_FEATURES.md  beta-launch.md  deployment.md  foundation.md  index.md  platform.md  spreadsheet-audit.md  unibite-workbook-resolution.md
public/: about.html  account.html  account.js  index.html  plan.js  saved.html  saved.js  shared.js  styles.css
scripts/: beta-smoke.ps1  browser_smoke.py  playwright_integration.py  prepare_vercel_public.py  refresh_discovery_snapshot.py  register_live_pricing_jobs.ps1  run_live_pricing_jobs.py  scrape_free_prices.py  stop-local.ps1  verify.ps1
src/: main.py
tests/: test_api_endpoints.py  test_api_persistence.py  test_api_service.py  test_api_storage.py  test_assistant.py  test_cli.py  test_data_io.py  test_deals.py  test_frontend_theme.py  test_geo_discovery.py  test_live_pricing.py  test_location.py  test_main.py  test_optimizer.py  test_price_prediction.py  test_report.py  test_stores.py  test_unit_pricing_and_flipp.py  test_workbook_regressions.py
web/: about.html  account.html  account.js  index.html  plan.js  saved.html  saved.js  shared.js  styles.css
(+52 files in other folders)
